--- a/src/components/menu-item/menu-item.style.scss
+++ b/src/components/menu-item/menu-item.style.scss
@@ -8,15 +8,27 @@
     justify-content: center;
     border: 1px solid black;
     margin: 0 7.5px 15px;
+    position: relative;
+    overflow: hidden;
 
-    // for the images (background) 
-    background-position: center;
-    background-size: cover;
+    &:hover  {
+        cursor: pointer;
+
+        & .background-image {
+            transform: scale(1.1);
+            transition: transform 6s cubic-bezier(0.25, 0.45, 0.45, 0.95);
+        }
+
+        & .content {
+            opacity: 0.7;
+            transition: opacity 1s;
+        }
+    }
 
     &.large {
         height: 380px;
     }
-    
+
     &:first-child {
         margin-right: 7.5px;
     }
@@ -25,6 +37,15 @@
         margin-left: 7.5px;
     }
 
+    .background-image  {
+        width: 100%;
+        height: 100%;
+        // for the images (background) 
+        background-position: center;
+        background-size: cover;
+
+    }
+    
     .content {
         height:90px;
         padding: 0 25px;
@@ -33,6 +54,8 @@
         align-items: center;
         justify-content: center;
         border: 1px solid black;
+        background-color: rgba($color: #fff, $alpha: 0.7);
+        position: absolute;
 
 
         .title {
