integrated signin and signout page. updated custom button component.

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
     font-family: 'Open Sans Condensed';
     padding: 20px 60px; /* 20 top and bottom, 60 on sides. */
