--- a/src/components/sign-in/sign-in.styles.scss
+++ b/src/components/sign-in/sign-in.styles.scss
@@ -1,10 +1,15 @@
 .sign-in {
-    width: 30vw;
+    width: 380px;
     display: flex;
     flex-direction: column;
     padding:2%;
 
     .title {
         margin: 10px 0;
+    }
+
+    .button {
+        display: flex;
+        justify-content: space-between;
     }
 }
